lanecwe-Prod/src/objects/Contract_Terms__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Verbiage_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Product_Verbiage_External_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <label>Terms and Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Contract Product Verbiage</label>
    <nameField>
        <label>Contract Product Verbiage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Product Verbiage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>